BajiDeveloperEdition/src/objects/Contactdetails__c.object
<CustomObject>
    <description>Contactdetails</description>
    <fields>
        <fullName>ContactAddress__c</fullName>
        <description>ContactAddress</description>
        <inlineHelpText>Enter Contact Address</inlineHelpText>
        <label>ContactAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>Contact Name</description>
        <inlineHelpText>Enter contact name</inlineHelpText>
        <label>ContactName</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>ContactPhone</description>
        <inlineHelpText>Enter Contact Phone</inlineHelpText>
        <label>ContactPhone</label>
        <type>Phone</type>
    </fields>
    <label>Contactdetails</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contactdetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contactdetailss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>